@@ -1,4 +1,11 @@
 
+2022-05-31  Simon Sobisch <simonsobisch@gnu.org>
+
+	* cobc.c (cobc_check_string): replaced single string cache by an array
+	  of caches using the string length as index; allowing much faster lookups
+	* codegen.c (chk_field_variable_address): [not working -> disabled] draft
+	  for speedup by not checking the same field multiple time
+
 2022-05-30  Nicolas Berthier <nicolas.berthier@ocamlpro.com>
 
 	* help.c (cobc_print_usage_common_options): document new -std
